--- a/index.html
+++ b/index.html
@@ -36,43 +36,48 @@
 	</head>
 	<body>
 
+		<!-- ローディング画面
+		<div class="l-loader" id="loader">
+      <div class="l-loader__content" id="loader-spiner"></div>
+    </div> -->
+
 		<!-- header -->
 		<header class="l-header" id="header">
 			<div class="l-header-container">
 				<h1 class="l-header__logo">
-					<a class="l-header__logo__link" href="">
+					<a class="l-header__logo__link" href="./index.html">
 						<img src="./assets/images/logo.png" alt="">
 					</a>
 				</h1>
-				<nav class="l-header-right">
+				<nav class="l-header-right page-link">
 					<ul class="l-header-right-list">
 						<li class="l-header-right-list__item">
-							<a class="l-header-right-list__item__link" href="">
-								保険業会について
+							<a class="l-header-right-list__item__link" href="#industory">
+								保険業界について
 							</a>
 						</li>
 						<li class="l-header-right-list__item">
-							<a class="l-header-right-list__item__link" href="">
+							<a class="l-header-right-list__item__link" href="#consultant">
 								保険コンサルタントとは
 							</a>
 						</li>
 						<li class="l-header-right-list__item">
-							<a class="l-header-right-list__item__link" href="">
+							<a class="l-header-right-list__item__link" href="#support">
 								独立支援制度
 							</a>
 						</li>
 						<li class="l-header-right-list__item">
-							<a class="l-header-right-list__item__link" href="">
+							<a class="l-header-right-list__item__link" href="#people">
 								働く人
 							</a>
 						</li>
 						<li class="l-header-right-list__item">
-							<a class="l-header-right-list__item__link" href="">
+							<a class="l-header-right-list__item__link" href="#question">
 								よくある質問
 							</a>
 						</li>
 					</ul>
-					<a class="c-btn --contact" href="">
+					<a class="c-btn --contact" href="#contact">
 						<img class="mail-icon" src="./assets/images/mailIcon.svg" alt="">
 						<span>お問い合わせ</span>
 					</a>
@@ -83,36 +88,36 @@
 					<span></span>
 				</button>
 			</div>
-			<nav class="l-header-modal" id="navigation">
+			<nav class="l-header-modal page-link" id="navigation">
 				<div class="l-header-modal-container">
 					<ul class="l-header-modal-list">
 						<li class="l-header-modal-list-item">
-							<a href="" class="l-header-modal-list-item__link">
+							<a href="#industory" class="l-header-modal-list-item__link">
 								保険業界について
 							</a>
 						</li>
 						<li class="l-header-modal-list-item">
-							<a href="" class="l-header-modal-list-item__link">
+							<a href="#consultant" class="l-header-modal-list-item__link">
 								保険コンサルタントとは
 							</a>
 						</li>
 						<li class="l-header-modal-list-item">
-							<a href="" class="l-header-modal-list-item__link">
+							<a href="#support" class="l-header-modal-list-item__link">
 								独立支援制度
 							</a>
 						</li>
 						<li class="l-header-modal-list-item">
-							<a href="" class="l-header-modal-list-item__link">
+							<a href="#people" class="l-header-modal-list-item__link">
 								働く人
 							</a>
 						</li>
 						<li class="l-header-modal-list-item">
-							<a href="" class="l-header-modal-list-item__link">
+							<a href="#question" class="l-header-modal-list-item__link">
 								よくある質問
 							</a>
 						</li>
 					</ul>
-					<a class="c-btn --contact" href="">
+					<a class="c-btn --contact" href="#contact">
 						<img class="mail-icon" src="./assets/images/mailIcon.svg" alt="">
 						<span>お問い合わせ</span>
 					</a>
@@ -138,27 +143,137 @@
 			</nav>
 		</header>
 
+		<!-- 固定header -->
+		<header class="l-header --fixed" id="fixed-header">
+			<div class="l-header-container">
+				<h1 class="l-header__logo">
+					<a class="l-header__logo__link" href="./index.html">
+						<img src="./assets/images/logo.png" alt="">
+					</a>
+				</h1>
+				<nav class="l-header-right page-link">
+					<ul class="l-header-right-list">
+						<li class="l-header-right-list__item">
+							<a class="l-header-right-list__item__link" href="#industory">
+								保険業界について
+							</a>
+						</li>
+						<li class="l-header-right-list__item">
+							<a class="l-header-right-list__item__link" href="#consultant">
+								保険コンサルタントとは
+							</a>
+						</li>
+						<li class="l-header-right-list__item">
+							<a class="l-header-right-list__item__link" href="#support">
+								独立支援制度
+							</a>
+						</li>
+						<li class="l-header-right-list__item">
+							<a class="l-header-right-list__item__link" href="#people">
+								働く人
+							</a>
+						</li>
+						<li class="l-header-right-list__item">
+							<a class="l-header-right-list__item__link" href="#question">
+								よくある質問
+							</a>
+						</li>
+					</ul>
+					<a class="c-btn --contact" href="#contact">
+						<img class="mail-icon" src="./assets/images/mailIcon.svg" alt="">
+						<span>お問い合わせ</span>
+					</a>
+				</nav>
+				<button class="l-header-hamburger" id="hamburger">
+					<span></span>
+					<span></span>
+					<span></span>
+				</button>
+			</div>
+			<nav class="l-header-modal page-link" id="navigation">
+				<div class="l-header-modal-container">
+					<ul class="l-header-modal-list">
+						<li class="l-header-modal-list-item">
+							<a href="#industory" class="l-header-modal-list-item__link">
+								保険業界について
+							</a>
+						</li>
+						<li class="l-header-modal-list-item">
+							<a href="#consultant" class="l-header-modal-list-item__link">
+								保険コンサルタントとは
+							</a>
+						</li>
+						<li class="l-header-modal-list-item">
+							<a href="#support" class="l-header-modal-list-item__link">
+								独立支援制度
+							</a>
+						</li>
+						<li class="l-header-modal-list-item">
+							<a href="#people" class="l-header-modal-list-item__link">
+								働く人
+							</a>
+						</li>
+						<li class="l-header-modal-list-item">
+							<a href="#question" class="l-header-modal-list-item__link">
+								よくある質問
+							</a>
+						</li>
+					</ul>
+					<a class="c-btn --contact" href="#contact">
+						<img class="mail-icon" src="./assets/images/mailIcon.svg" alt="">
+						<span>お問い合わせ</span>
+					</a>
+					<ul class="l-header-modal-ex">
+						<li class="l-header-modal-ex-item">
+							<a class="l-header-modal-ex-item__link" href="https://www.aioinissaydowa.co.jp/" target="_blank" rel="noopener noreferrer">
+								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+								<span class="l-header-modal-ex-item__link__txt">
+									あいおいニッセイ同和損保
+								</span>
+							</a>
+						</li>
+						<li class="l-header-modal-ex-item">
+							<a class="l-header-modal-ex-item__link" href="https://www.aioinissaydowa.co.jp/corporate/policy/privacy.html" target="_blank" rel="noopener noreferrer">
+								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+								<span class="l-header-modal-ex-item__link__txt">
+									個人情報保護方針
+								</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+
+		<!-- 画面下固定ボタン -->
+		<div class="c-bottom-btn page-link" id="bottom-fixed-btn">
+			<a class="c-bottom-btn__content" href="#contact">
+				<span class="c-bottom-btn__content__triangle"></span>
+				まずは話を聞いてみる
+			</a>
+		</div>
+
 		<!-- main -->
-		<main class="l-main" id="main">
-			<section class="p-mv">
-				<h1 class="p-mv__title">
-					<em class="p-mv__title__em">未経験から、<br class="u-for-sm">保険のプロへ。</em><br>
+		<main>
+			<section class="p-mv" id="mv">
+				<h1 class="p-mv__title js-split" id="main-title">
+					未経験から、<br class="u-for-sm">保険のプロへ。<br>
 					あいおいで保険コンサルタントになろう。
 				</h1>
 				<div class="p-mv-bottom">
-					<div class="p-mv-bottom-left">
+					<div class="p-mv-bottom-left page-link">
 						<img class="p-mv-bottom-left__badge" src="./assets/images/mvBadge.png" alt="">
-						<a class="c-btn --hear" href="">
+						<a class="c-btn --hear" href="#contact">
 							<span class="triangle"></span>
 							<span>まずは話を聞いてみる</span>
 						</a>
 					</div>
-					<div class="p-mv-bottom-right">
-						<img src="./assets/images/mv.png" alt="">
+					<div class="p-mv-bottom-right" id="main-img">
+						<img class="p-mv-bottom-right__content" src="./assets/images/mv.png" alt="">
 					</div>
 				</div>
 			</section>
-			<section class="p-industory">
+			<section class="p-industory" id="industory">
 				<div class="c-bg"></div>
 				<div class="p-industory-container container">
 					<h2 class="c-section-title">
@@ -230,7 +345,7 @@
 					</ul>
 				</div>
 			</section>
-			<section class="p-consultant">
+			<section class="p-consultant" id="consultant">
 				<div class="p-consultant-container container">
 					<h2 class="c-section-title">
 						<span class="en">
@@ -254,12 +369,14 @@
 					<!-- モーダル終了 -->
 				</div>
 			</section>
-			<section class="p-support">
+			<section class="p-support" id="support">
 				<picture class="p-support__bg">
 					<source srcset="./assets/images/sm/supportBg.png" media="(max-width: 520px)" />
 					<img src="./assets/images/supportBg.png" alt="">
 				</picture>
 				<div class="p-support-container container">
+					<div class="p-support__lines --long js-line"></div>
+					<div class="p-support__lines --short js-line"></div>
 					<h2 class="c-section-title">
 						<span class="en">
 							Support system
@@ -288,7 +405,7 @@
 					</picture>
 				</div>
 			</section>
-			<section class="p-people">
+			<section class="p-people" id="people">
 				<div class="c-bg --people"></div>
 				<div class="p-people-container container">
 					<h2 class="c-section-title">
@@ -494,7 +611,7 @@
 					</ul>
 				</div>
 			</section>
-			<section class="p-pitch">
+			<section class="p-pitch" id="pitch">
 				<div class="p-pitch-container container">
 					<h2 class="p-pitch__title">
 						Get to Know us.
@@ -507,7 +624,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="p-question">
+			<section class="p-question" id="question">
 				<picture class="p-question__bg">
 					<source srcset="./assets/images/sm/questionBg.png" media="(max-width: 520px)" />
 					<img src="./assets/images/questionBg.png" alt="">
@@ -521,37 +638,52 @@
 							よくある質問
 						</span>
 					</h2>
-					<dl class="p-question-item">
-						<dt class="p-question-item__head">
+					<dl class="p-question-item js-accordion">
+						<dt class="p-question-item__head js-accordion-head">
 							<img class="p-question-item__head__icon" class="" src="./assets/images/questionIcon.png" alt="">
 							<span class="p-question-item__head__txt">
 								業界未経験ですが、すぐに活躍できますか？
 							</span>
-							<button class="p-question-item__head__batu"></button>
+							<button class="p-question-item__head__batu js-head-btn"></button>
 						</dt>
+						<dd class="p-question-item__content js-accordion-content">
+							<p>
+								大丈夫です！マーケット開拓の先任者から様々な研修を受けることができるので、全くの業界未経験者であっても高い提案力を養うことが可能です。
+							</p>
+						</dd>
 					</dl>
-					<dl class="p-question-item">
-						<dt class="p-question-item__head">
+					<dl class="p-question-item js-accordion">
+						<dt class="p-question-item__head js-accordion-head">
 							<img class="p-question-item__head__icon" class="" src="./assets/images/questionIcon.png" alt="">
 							<span class="p-question-item__head__txt">
 								飛び込み営業はありますか？
 							</span>
-							<button class="p-question-item__head__batu"></button>
+							<button class="p-question-item__head__batu js-head-btn"></button>
 						</dt>
+						<dd class="p-question-item__content js-accordion-content">
+							<p>
+								ないです。マーケット開拓の手法としてはダイレクトメール郵送後に、電話によるアポイントの取り付けを行っており、その後に訪問して営業活動を実施していただいています。
+							</p>
+						</dd>
 					</dl>
-					<dl class="p-question-item">
-						<dt class="p-question-item__head">
+					<dl class="p-question-item js-accordion">
+						<dt class="p-question-item__head js-accordion-head">
 							<img class="p-question-item__head__icon" class="" src="./assets/images/questionIcon.png" alt="">
 							<span class="p-question-item__head__txt">
 								ノルマはありますか？
 							</span>
-							<button class="p-question-item__head__batu"></button>
+							<button class="p-question-item__head__batu js-head-btn"></button>
 						</dt>
+						<dd class="p-question-item__content js-accordion-content">
+							<p>
+								3ヶ月毎の在籍基準を設けています。決してハードルは高くないですが、基準の詳細については面接時にしっかりとお伝えしますのでご安心ください。
+							</p>
+						</dd>
 					</dl>
 				</div>
 			</section>
-			<section class="p-contact">
-				<div class="p-contact-container container">
+			<section class="l-contact" id="contact">
+				<div class="l-contact-container container">
 					<h2 class="c-section-title">
 						<span class="en">
 							Contact
@@ -560,75 +692,75 @@
 							お問い合わせ
 						</span>
 					</h2>
-					<p class="p-contact__caution">
+					<p class="l-contact__caution">
 						お気軽にお問い合わせくださいませ。<br class="u-for-sm">下記の項目は、全て入力必須です。
 					</p>
-					<picture class="p-contact__progress">
+					<picture class="c-progress">
 						<source srcset="./assets/images/sm/progress.png" media="(max-width: 520px)" />
 						<img src="./assets/images/progress.png" alt="">
 					</picture>
-					<div class="l-form">
+					<div class="l-contact-form">
 						<form>
-							<ul class="l-form-list">
-								<li class="l-form-item">
-									<p class="l-form-item__head">
+							<ul class="l-contact-form-list">
+								<li class="l-contact-form-item">
+									<p class="l-contact-form-item__head">
 										お名前
 									</p>
-									<div class="l-form-item__body">
-										<input name="name" class="l-form-item__body__input" type="text" placeholder="山田 太郎">
+									<div class="l-contact-form-item__body">
+										<input name="name" class="l-contact-form-item__body__input" type="text" placeholder="山田 太郎">
 									</div>
 								</li>
-								<li class="l-form-item">
-									<p class="l-form-item__head">
+								<li class="l-contact-form-item">
+									<p class="l-contact-form-item__head">
 										フリガナ
 									</p>
-									<div class="l-form-item__body">
-										<input name="kana" class="l-form-item__body__input" type="text" placeholder="ヤマダ タロウ">
+									<div class="l-contact-form-item__body">
+										<input name="kana" class="l-contact-form-item__body__input" type="text" placeholder="ヤマダ タロウ">
 									</div>
 								</li>
-								<li class="l-form-item">
-									<p class="l-form-item__head">
+								<li class="l-contact-form-item">
+									<p class="l-contact-form-item__head">
 										電話番号
 									</p>
-									<div class="l-form-item__body">
-										<input name="tel" class="l-form-item__body__input" type="tel" placeholder="012-3456-7891">
+									<div class="l-contact-form-item__body">
+										<input name="tel" class="l-contact-form-item__body__input" type="tel" placeholder="012-3456-7891">
 									</div>
 								</li>
-								<li class="l-form-item">
-									<p class="l-form-item__head">
+								<li class="l-contact-form-item">
+									<p class="l-contact-form-item__head">
 										メールアドレス
 									</p>
-									<div class="l-form-item__body">
-										<input name="email" class="l-form-item__body__input" type="email">
+									<div class="l-contact-form-item__body">
+										<input name="email" class="l-contact-form-item__body__input" type="email">
 									</div>
 								</li>
-								<li class="l-form-item">
-									<p class="l-form-item__head">
+								<li class="l-contact-form-item">
+									<p class="l-contact-form-item__head">
 										メールアドレス(確認用)
 									</p>
-									<div class="l-form-item__body">
-										<input name="email_confirm" class="l-form-item__body__input" type="email">
+									<div class="l-contact-form-item__body">
+										<input name="email_confirm" class="l-contact-form-item__body__input" type="email">
 									</div>
 								</li>
-								<li class="l-form-item">
-									<p class="l-form-item__head">
+								<li class="l-contact-form-item">
+									<p class="l-contact-form-item__head">
 										年齢
 									</p>
-									<div class="l-form-item__body">
-										<input name="age" class="l-form-item__body__input --age" type="text" placeholder="20">
+									<div class="l-contact-form-item__body">
+										<input name="age" class="l-contact-form-item__body__input --age" type="text" placeholder="20">
 									</div>
 								</li>
 							</ul>
-							<label class="l-form-agree">
-								<input class="l-form-agree__checkbox" type="checkbox">
-								<span class="l-form-agree__txt">
-									<a class="l-form-agree__txt__link" href="https://www.aioinissaydowa.co.jp/corporate/policy/privacy.html" target="_blank" rel="noopener noreferrer">
+							<label class="l-contact-form-agree">
+								<input class="l-contact-form-agree__checkbox" type="checkbox">
+								<span class="l-contact-form-agree__txt">
+									<a class="l-contact-form-agree__txt__link" href="https://www.aioinissaydowa.co.jp/corporate/policy/privacy.html" target="_blank" rel="noopener noreferrer">
 										個人情報保護方針
 									</a>
 									に同意する
 								</span>
 							</label>
-							<button class="l-form__btn" type="submit">
+							<button class="l-contact-form__btn" type="submit">
 								<span>
 									確認する
 								</span>
@@ -644,43 +776,43 @@
 			<div class="l-footer-container container">
 				<div class="l-footer-top">
 					<h1 class="l-footer__logo">
-						<a class="l-footer__logo__link" href="">
+						<a class="l-footer__logo__link" href="./index.html">
 							<img src="./assets/images/logo.png" alt="">
 						</a>
 					</h1>
-					<ul class="l-footer-links">
+					<ul class="l-footer-links page-link">
 						<div class="l-footer-links-line">
 							<li class="l-footer-links-item">
-								<a class="l-footer-links-item__link" href="">
+								<a class="l-footer-links-item__link" href="#industory">
 									保険業界について
 								</a>
 							</li>
 							<li class="l-footer-links-item">
-								<a class="l-footer-links-item__link" href="">
+								<a class="l-footer-links-item__link" href="#consultant">
 									保険コンサルタントとは
 								</a>
 							</li>
 						</div>
 						<div class="l-footer-links-line">
 							<li class="l-footer-links-item">
-								<a class="l-footer-links-item__link" href="">
+								<a class="l-footer-links-item__link" href="#support">
 									独立支援制度
 								</a>
 							</li>
 							<li class="l-footer-links-item">
-								<a class="l-footer-links-item__link" href="">
+								<a class="l-footer-links-item__link" href="#people">
 									働く人
 								</a>
 							</li>
 						</div>
 						<div class="l-footer-links-line">
 							<li class="l-footer-links-item">
-								<a class="l-footer-links-item__link" href="">
+								<a class="l-footer-links-item__link" href="#question">
 									よくある質問
 								</a>
 							</li>
 							<li class="l-footer-links-item">
-								<a class="l-footer-links-item__link" href="">
+								<a class="l-footer-links-item__link" href="#contact">
 									お問い合わせ
 								</a>
 							</li>
@@ -718,6 +850,6 @@
 
 	<!-- script -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script type="module" src="./assets/js/main.js"></script>
+	<script type="module" src="./assets/js/index.js"></script>
 
 </html>
