--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
 		<!-- サイト情報 -->
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
-		<title>あいおいニッセイ同和損保</title>
-		<meta name="description" content="ディスクリプションを入れてください。" />
+		<title>あいおいニッセイ同和損保｜採用サイト</title>
+		<meta name="description" content="あいおいニッセイ同和損保の採用サイトです。" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="format-detection" content="telephone=no" />
 
 		<!-- OG -->
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="タイトル" />
+		<meta property="og:title" content="あいおいニッセイ同和損保｜採用サイト" />
 		<meta
 			property="og:description"
-			content="ディスクリプションを入れてください。"
+			content="あいおいニッセイ同和損保の採用サイトです。"
+		/>
+		<meta 
+			property="og:image"
+			content="assets/images/favicons/ogp.webp"
 		/>
 
 		<!-- favicon -->
-		<link rel="icon" href="" />
+		<link rel="icon" href="assets/images/favicons/favicon.ico" />
+
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href=""
+			href="assets/images/favicons/apple-touch-icon.webp"
 		/>
 
 		<!-- font -->
@@ -36,17 +41,17 @@
 	</head>
 	<body>
 
-		<!-- ローディング画面
+		<!-- ローディング画面 -->
 		<div class="l-loader" id="loader">
       <div class="l-loader__content" id="loader-spiner"></div>
-    </div> -->
+    </div>
 
 		<!-- header -->
 		<header class="l-header" id="header">
 			<div class="l-header-container">
 				<h1 class="l-header__logo">
 					<a class="l-header__logo__link" href="./index.html">
-						<img src="./assets/images/logo.png" alt="">
+						<img src="./assets/images/logo.webp" alt="">
 					</a>
 				</h1>
 				<nav class="l-header-right page-link">
@@ -124,7 +129,7 @@
 					<ul class="l-header-modal-ex">
 						<li class="l-header-modal-ex-item">
 							<a class="l-header-modal-ex-item__link" href="https://www.aioinissaydowa.co.jp/" target="_blank" rel="noopener noreferrer">
-								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 								<span class="l-header-modal-ex-item__link__txt">
 									あいおいニッセイ同和損保
 								</span>
@@ -132,7 +137,7 @@
 						</li>
 						<li class="l-header-modal-ex-item">
 							<a class="l-header-modal-ex-item__link" href="https://www.aioinissaydowa.co.jp/corporate/policy/privacy.html" target="_blank" rel="noopener noreferrer">
-								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 								<span class="l-header-modal-ex-item__link__txt">
 									個人情報保護方針
 								</span>
@@ -148,7 +153,7 @@
 			<div class="l-header-container">
 				<h1 class="l-header__logo">
 					<a class="l-header__logo__link" href="./index.html">
-						<img src="./assets/images/logo.png" alt="">
+						<img src="./assets/images/logo.webp" alt="">
 					</a>
 				</h1>
 				<nav class="l-header-right page-link">
@@ -226,7 +231,7 @@
 					<ul class="l-header-modal-ex">
 						<li class="l-header-modal-ex-item">
 							<a class="l-header-modal-ex-item__link" href="https://www.aioinissaydowa.co.jp/" target="_blank" rel="noopener noreferrer">
-								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 								<span class="l-header-modal-ex-item__link__txt">
 									あいおいニッセイ同和損保
 								</span>
@@ -234,7 +239,7 @@
 						</li>
 						<li class="l-header-modal-ex-item">
 							<a class="l-header-modal-ex-item__link" href="https://www.aioinissaydowa.co.jp/corporate/policy/privacy.html" target="_blank" rel="noopener noreferrer">
-								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 								<span class="l-header-modal-ex-item__link__txt">
 									個人情報保護方針
 								</span>
@@ -262,14 +267,14 @@
 				</h1>
 				<div class="p-mv-bottom">
 					<div class="p-mv-bottom-left page-link">
-						<img class="p-mv-bottom-left__badge" src="./assets/images/mvBadge.png" alt="">
+						<img class="p-mv-bottom-left__badge" src="./assets/images/mvBadge.webp" alt="">
 						<a class="c-btn --hear" href="#contact">
 							<span class="triangle"></span>
 							<span>まずは話を聞いてみる</span>
 						</a>
 					</div>
 					<div class="p-mv-bottom-right" id="main-img">
-						<img class="p-mv-bottom-right__content" src="./assets/images/mv.png" alt="">
+						<img class="p-mv-bottom-right__content" src="./assets/images/mv.webp" alt="">
 					</div>
 				</div>
 			</section>
@@ -290,8 +295,8 @@
 								01
 							</span>
 							<picture class="p-industory-item__img">
-								<source srcset="./assets/images/sm/industory01.png" media="(max-width: 520px)" />
-								<img src="./assets/images/industory01.png" alt="">
+								<source srcset="./assets/images/sm/industory01.webp" media="(max-width: 520px)" />
+								<img src="./assets/images/industory01.webp" alt="">
 							</picture>
 							<div class="p-industory-item-bottom">
 								<div class="p-industory-item-bottom-container">
@@ -309,8 +314,8 @@
 								02
 							</span>
 							<picture class="p-industory-item__img">
-								<source srcset="./assets/images/sm/industory02.png" media="(max-width: 520px)" />
-								<img src="./assets/images/industory02.png" alt="">
+								<source srcset="./assets/images/sm/industory02.webp" media="(max-width: 520px)" />
+								<img src="./assets/images/industory02.webp" alt="">
 							</picture>
 							<div class="p-industory-item-bottom">
 								<div class="p-industory-item-bottom-container">
@@ -328,8 +333,8 @@
 								03
 							</span>
 							<picture class="p-industory-item__img">
-								<source srcset="./assets/images/sm/industory03.png" media="(max-width: 520px)" />
-								<img src="./assets/images/industory03.png" alt="">
+								<source srcset="./assets/images/sm/industory03.webp" media="(max-width: 520px)" />
+								<img src="./assets/images/industory03.webp" alt="">
 							</picture>
 							<div class="p-industory-item-bottom">
 								<div class="p-industory-item-bottom-container">
@@ -356,7 +361,7 @@
 						</span>
 					</h2>
 					<a class="p-consultant-video js-modal-open" data-target="modal01">
-						<img class="" src="./assets/images/video.png" alt="">
+						<img class="" src="./assets/images/video.webp" alt="">
 					</a>
 					<!-- モーダル -->
 					<div class="p-consultant-modal js-modal is-close js-modal-close" id="modal01">
@@ -371,8 +376,8 @@
 			</section>
 			<section class="p-support" id="support">
 				<picture class="p-support__bg">
-					<source srcset="./assets/images/sm/supportBg.png" media="(max-width: 520px)" />
-					<img src="./assets/images/supportBg.png" alt="">
+					<source srcset="./assets/images/sm/supportBg.webp" media="(max-width: 520px)" />
+					<img src="./assets/images/supportBg.webp" alt="">
 				</picture>
 				<div class="p-support-container container">
 					<div class="p-support__lines --long js-line"></div>
@@ -387,7 +392,7 @@
 					</h2>
 					<div class="p-support-middle">
 						<div class="p-support-middle__img">
-							<img src="./assets/images/supportWomen.png" alt="">
+							<img src="./assets/images/supportWomen.webp" alt="">
 						</div>
 						<div class="p-support-middle-right">
 							<h3 class="p-support-middle__title">
@@ -400,8 +405,8 @@
 						</div>
 					</div>
 					<picture class="p-support-bottom">
-						<source srcset="./assets/images/sm/supportFlow.png" media="(max-width: 520px)" />
-						<img src="./assets/images/supportFlow.png" alt="">
+						<source srcset="./assets/images/sm/supportFlow.webp" media="(max-width: 520px)" />
+						<img src="./assets/images/supportFlow.webp" alt="">
 					</picture>
 				</div>
 			</section>
@@ -423,8 +428,8 @@
 									01
 								</span>
 								<picture class="p-people-item-top">
-									<source srcset="./assets/images/sm/people01.png" media="(max-width: 520px)" />
-									<img src="./assets/images/people01.png" alt="">
+									<source srcset="./assets/images/sm/people01.webp" media="(max-width: 520px)" />
+									<img src="./assets/images/people01.webp" alt="">
 									<span class="p-people-item-top__arrow">
 										<span class="p-people-item-top__arrow__content">
 										</span>
@@ -453,8 +458,8 @@
 									02
 								</span>
 								<picture class="p-people-item-top">
-									<source srcset="./assets/images/sm/people02.png" media="(max-width: 520px)" />
-									<img src="./assets/images/people02.png" alt="">
+									<source srcset="./assets/images/sm/people02.webp" media="(max-width: 520px)" />
+									<img src="./assets/images/people02.webp" alt="">
 									<span class="p-people-item-top__arrow">
 										<span class="p-people-item-top__arrow__content">
 										</span>
@@ -488,8 +493,8 @@
 								<div class="p-people-modal-item-top">
 									<div class="p-people-modal-item-top-profile">
 										<picture class="p-people-modal-item-top-profile-left">
-											<img class="p-people-modal-item-top-profile-left__txt" src="./assets/images/modalHiranoTopTxt.png" alt="">
-											<img src="./assets/images/modalHiranoTop.png" alt="">
+											<img class="p-people-modal-item-top-profile-left__txt" src="./assets/images/modalHiranoTopTxt.webp" alt="">
+											<img src="./assets/images/modalHiranoTop.webp" alt="">
 										</picture>
 										<div class="p-people-modal-item-top-profile-right">
 											<div class="p-people-modal-item-top-profile-right-top">
@@ -524,8 +529,8 @@
 								</div>
 								<div class="p-people-modal-item-bottom">
 									<div class="p-people-modal-item-bottom__left">
-										<img class="p-people-modal-item-bottom__left__txt" src="./assets/images/modalHiranoBottomTxt.png" alt="">
-										<img src="./assets/images/modalHiranoBottom.png" alt="">
+										<img class="p-people-modal-item-bottom__left__txt" src="./assets/images/modalHiranoBottomTxt.webp" alt="">
+										<img src="./assets/images/modalHiranoBottom.webp" alt="">
 										<span class="p-people-modal-item-bottom__left__desc">
 											平野社員の奥さま
 										</span>
@@ -553,8 +558,8 @@
 								<div class="p-people-modal-item-top">
 									<div class="p-people-modal-item-top-profile">
 										<picture class="p-people-modal-item-top-profile-left">
-											<img class="p-people-modal-item-top-profile-left__txt --goto" src="./assets/images/modalGotoTopTxt.png" alt="">
-											<img src="./assets/images/modalGotoTop.png" alt="">
+											<img class="p-people-modal-item-top-profile-left__txt --goto" src="./assets/images/modalGotoTopTxt.webp" alt="">
+											<img src="./assets/images/modalGotoTop.webp" alt="">
 										</picture>
 										<div class="p-people-modal-item-top-profile-right">
 											<div class="p-people-modal-item-top-profile-right-top">
@@ -588,8 +593,8 @@
 								</div>
 								<div class="p-people-modal-item-bottom">
 									<div class="p-people-modal-item-bottom__left">
-										<img class="p-people-modal-item-bottom__left__txt --goto" src="./assets/images/modalGotoBottomTxt.png" alt="">
-										<img src="./assets/images/modalGotoBottom.png" alt="">
+										<img class="p-people-modal-item-bottom__left__txt --goto" src="./assets/images/modalGotoBottomTxt.webp" alt="">
+										<img src="./assets/images/modalGotoBottom.webp" alt="">
 										<span class="p-people-modal-item-bottom__left__desc">
 											提携する自動車販売会社社長
 										</span>
@@ -620,14 +625,14 @@
 						下記のスライドにて、当社についてより詳しく確認していただけます。
 					</p>
 					<div class="p-pitch__content">
-						<img src="./assets/images/pitch.png" alt="">
+						<img src="./assets/images/pitch.webp" alt="">
 					</div>
 				</div>
 			</section>
 			<section class="p-question" id="question">
 				<picture class="p-question__bg">
-					<source srcset="./assets/images/sm/questionBg.png" media="(max-width: 520px)" />
-					<img src="./assets/images/questionBg.png" alt="">
+					<source srcset="./assets/images/sm/questionBg.webp" media="(max-width: 520px)" />
+					<img src="./assets/images/questionBg.webp" alt="">
 				</picture>
 				<div class="p-question-container container">
 					<h2 class="c-section-title">
@@ -640,7 +645,7 @@
 					</h2>
 					<dl class="p-question-item js-accordion">
 						<dt class="p-question-item__head js-accordion-head">
-							<img class="p-question-item__head__icon" class="" src="./assets/images/questionIcon.png" alt="">
+							<img class="p-question-item__head__icon" class="" src="./assets/images/questionIcon.webp" alt="">
 							<span class="p-question-item__head__txt">
 								業界未経験ですが、すぐに活躍できますか？
 							</span>
@@ -654,7 +659,7 @@
 					</dl>
 					<dl class="p-question-item js-accordion">
 						<dt class="p-question-item__head js-accordion-head">
-							<img class="p-question-item__head__icon" class="" src="./assets/images/questionIcon.png" alt="">
+							<img class="p-question-item__head__icon" class="" src="./assets/images/questionIcon.webp" alt="">
 							<span class="p-question-item__head__txt">
 								飛び込み営業はありますか？
 							</span>
@@ -668,7 +673,7 @@
 					</dl>
 					<dl class="p-question-item js-accordion">
 						<dt class="p-question-item__head js-accordion-head">
-							<img class="p-question-item__head__icon" class="" src="./assets/images/questionIcon.png" alt="">
+							<img class="p-question-item__head__icon" class="" src="./assets/images/questionIcon.webp" alt="">
 							<span class="p-question-item__head__txt">
 								ノルマはありますか？
 							</span>
@@ -696,8 +701,8 @@
 						お気軽にお問い合わせくださいませ。<br class="u-for-sm">下記の項目は、全て入力必須です。
 					</p>
 					<picture class="c-progress">
-						<source srcset="./assets/images/sm/progress.png" media="(max-width: 520px)" />
-						<img src="./assets/images/progress.png" alt="">
+						<source srcset="./assets/images/sm/progress.webp" media="(max-width: 520px)" />
+						<img src="./assets/images/progress.webp" alt="">
 					</picture>
 					<div class="l-contact-form">
 						<form>
@@ -777,7 +782,7 @@
 				<div class="l-footer-top">
 					<h1 class="l-footer__logo">
 						<a class="l-footer__logo__link" href="./index.html">
-							<img src="./assets/images/logo.png" alt="">
+							<img src="./assets/images/logo.webp" alt="">
 						</a>
 					</h1>
 					<ul class="l-footer-links page-link">
@@ -822,7 +827,7 @@
 				<ul class="l-footer-ex">
 					<li class="l-footer-ex-item">
 						<a class="l-footer-ex-item__link" href="https://www.aioinissaydowa.co.jp/" target="_blank" rel="noopener noreferrer">
-							<img class="l-footer-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+							<img class="l-footer-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 							<span class="l-footer-ex-item__link__txt">
 								あいおいニッセイ同和損保
 							</span>
@@ -830,7 +835,7 @@
 					</li>
 					<li class="l-footer-ex-item">
 						<a class="l-footer-ex-item__link" href="https://www.aioinissaydowa.co.jp/corporate/policy/privacy.html" target="_blank" rel="noopener noreferrer">
-							<img class="l-footer-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+							<img class="l-footer-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 							<span class="l-footer-ex-item__link__txt">
 								個人情報保護方針
 							</span>
