--- a/thanks.html
+++ b/thanks.html
@@ -4,25 +4,30 @@
 		<!-- サイト情報 -->
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
-		<title>あいおいニッセイ同和損保</title>
-		<meta name="description" content="ディスクリプションを入れてください。" />
+		<title>あいおいニッセイ同和損保｜採用サイト</title>
+		<meta name="description" content="あいおいニッセイ同和損保の採用サイトです。" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="format-detection" content="telephone=no" />
 
 		<!-- OG -->
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="タイトル" />
+		<meta property="og:title" content="あいおいニッセイ同和損保｜採用サイト" />
 		<meta
 			property="og:description"
-			content="ディスクリプションを入れてください。"
+			content="あいおいニッセイ同和損保の採用サイトです。"
+		/>
+		<meta 
+			property="og:image"
+			content="assets/images/favicons/ogp.webp"
 		/>
 
 		<!-- favicon -->
-		<link rel="icon" href="" />
+		<link rel="icon" href="assets/images/favicons/favicon.ico" />
+
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href=""
+			href="assets/images/favicons/apple-touch-icon.webp"
 		/>
 
 		<!-- font -->
@@ -41,7 +46,7 @@
 			<div class="l-header-container">
 				<h1 class="l-header__logo">
 					<a class="l-header__logo__link" href="./index.html">
-						<img src="./assets/images/logo.png" alt="">
+						<img src="./assets/images/logo.webp" alt="">
 					</a>
 				</h1>
 				<nav class="l-header-right page-link">
@@ -119,7 +124,7 @@
 					<ul class="l-header-modal-ex">
 						<li class="l-header-modal-ex-item">
 							<a class="l-header-modal-ex-item__link" href="https://www.aioinissaydowa.co.jp/" target="_blank" rel="noopener noreferrer">
-								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 								<span class="l-header-modal-ex-item__link__txt">
 									あいおいニッセイ同和損保
 								</span>
@@ -127,7 +132,7 @@
 						</li>
 						<li class="l-header-modal-ex-item">
 							<a class="l-header-modal-ex-item__link" href="https://www.aioinissaydowa.co.jp/corporate/policy/privacy.html" target="_blank" rel="noopener noreferrer">
-								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+								<img class="l-header-modal-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 								<span class="l-header-modal-ex-item__link__txt">
 									個人情報保護方針
 								</span>
@@ -154,8 +159,8 @@
 						この度はお問い合わせいただき、<br class="u-for-sm">誠にありがとうございます。
 					</p>
 					<picture class="c-progress">
-						<source srcset="./assets/images/sm/progressThanks.png" media="(max-width: 520px)" />
-						<img src="./assets/images/progressThanks.png" alt="">
+						<source srcset="./assets/images/sm/progressThanks.webp" media="(max-width: 520px)" />
+						<img src="./assets/images/progressThanks.webp" alt="">
 					</picture>
 					<p class="p-thanks__txt">
 						受付完了メール（自動送信）を送信しましたので、ご確認ください。<br class="u-for-md">
@@ -194,7 +199,7 @@
 				<div class="l-footer-top">
 					<h1 class="l-footer__logo">
 						<a class="l-footer__logo__link" href="./index.html">
-							<img src="./assets/images/logo.png" alt="">
+							<img src="./assets/images/logo.webp" alt="">
 						</a>
 					</h1>
 					<ul class="l-footer-links page-link">
@@ -239,7 +244,7 @@
 				<ul class="l-footer-ex">
 					<li class="l-footer-ex-item">
 						<a class="l-footer-ex-item__link" href="https://www.aioinissaydowa.co.jp/" target="_blank" rel="noopener noreferrer">
-							<img class="l-footer-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+							<img class="l-footer-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 							<span class="l-footer-ex-item__link__txt">
 								あいおいニッセイ同和損保
 							</span>
@@ -247,7 +252,7 @@
 					</li>
 					<li class="l-footer-ex-item">
 						<a class="l-footer-ex-item__link" href="https://www.aioinissaydowa.co.jp/corporate/policy/privacy.html" target="_blank" rel="noopener noreferrer">
-							<img class="l-footer-ex-item__link__icon" src="./assets/images/exLink.png" alt="">
+							<img class="l-footer-ex-item__link__icon" src="./assets/images/exLink.webp" alt="">
 							<span class="l-footer-ex-item__link__txt">
 								個人情報保護方針
 							</span>
